--- a/other-projects/index.html
+++ b/other-projects/index.html
@@ -156,7 +156,8 @@
 		<div class="projects">
 			<div class="project-card">
 				<h2>brokefetch</h2>
-				<p>A minimal system info fetch tool for broke people made by <a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a></p>
+				<p>A minimal system info fetch tool for broke people made by </p>
+				<a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a>
 				<a href="/other-projects/brokefetch/">Details</a>
 			</div>
 			<div class="project-card">
@@ -166,11 +167,18 @@
 			</div>
 				<div class="project-card">
 				<h2>text->ascii encoder</h2>
-				<p>A simple tool to convert text to ASCII values by <a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a>.</p>
+				<p>A simple tool to convert text to ASCII values by</p>
+				<a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a>
 				<a href="/other-projects/text-to-ascii/">Details</a>
 			</div>
+
+						<div class="project-card">
+				<h2>cpuinfo</h2>
+				<p>another random way to see what cpu you have by.</p>
+				<a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a>
+				<a href="/other-projects/cpuinfo/">Details</a>
+			</div>
 		</div>
-	</div>
 	<footer>
 		&copy; 2025 Aserdev Other Projects
 		<div class="footer-buttons">
