modified:   index.html

--- a/index.html
+++ b/index.html
@@ -98,9 +98,14 @@
 				<p>Discover more Bash and C tools built by me and friends. <br> <b>Featured:</b> brokefetch, ash-shell, and more.</p>
 				<a href="other-projects/index.html">See More</a>
 			</div>
-				<div style="text-align:center; margin-top:32px;">
+						<div class="project-card">
+				<h2>github</h2>
+				<p>see my projects on GitHub</p>
+				<a href="https://github.com/aserdevyt/" target="_blank">visit</a>
+			</div>
+				<!-- <div style="text-align:center; margin-top:32px;">
 					<a href="https://github.com/aserdevyt/" target="_blank" style="display:inline-block; padding:12px 28px; background:#38bdf8; color:#1e293b; border-radius:8px; font-weight:700; text-decoration:none; font-size:1.15em; transition:background 0.2s;">Visit My GitHub</a>
-				</div>
+				</div> -->
 				<hr style="margin:32px 0; border: none; border-top: 1px solid #64748b;">
 				<div style="text-align:center;">
 					<h2>About Me</h2>
