modified:   index.html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
 	<button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
 	<div class="container">
 		<h1>Hi, I'm Aserdev!</h1>
+		<!-- GitHub Badges -->
+<div class="badges">
+  <img src="https://img.shields.io/github/last-commit/aserdevyt/aserdevyt.github.io?style=flat-square" alt="GitHub last commit">
+  <img src="https://img.shields.io/github/repo-size/aserdevyt/aserdevyt.github.io?style=flat-square" alt="GitHub repo size">
+  <img src="https://img.shields.io/github/issues/aserdevyt/aserdevyt.github.io?style=flat-square" alt="GitHub issues">
+  <img src="https://img.shields.io/github/forks/aserdevyt/aserdevyt.github.io?style=flat-square" alt="GitHub forks">
+  <img src="https://img.shields.io/github/stars/aserdevyt/aserdevyt.github.io?style=flat-square" alt="GitHub stars">
+  <img src="https://img.shields.io/github/license/aserdevyt/aserdevyt.github.io?style=flat-square" alt="GitHub license">
+  <img src="https://img.shields.io/website-up-down-green-red/https/aserdevyt.github.io" alt="Website status">
+  <img src="https://img.shields.io/badge/performance-90%25-brightgreen" alt="Lighthouse performance">
+  <a href="https://aserdevyt.github.io" target="_blank">
+    <img src="https://img.shields.io/badge/Visit-Website-blue?style=flat-square" alt="Visit Website">
+  </a>
+</div>
+
 		<div class="desc">
 			Linux enthusiast, Arch user, open-source developer, and creator of cool tools in C and Bash.<br>
 			I love building minimal, fast, and useful software for the Linux community.<br>
